# Low-Effort-Home

./: .gitignore  CNAME  Home.html  Main.html  Members.html  OurWork.html  README.md  WhatWant  index.html  main3.html  mine.html
.github/workflows/: pages.yml
crypto/: index.html
rust/: index.html
rust/crypto/: Cargo.toml  index.html
rust/crypto/src/: lib.rs
rust/exif/: Cargo.toml  index.html
rust/exif/src/: lib.rs
rust/media/: Cargo.toml  index.html
rust/media/src/: lib.rs
site/: .gitattributes  Members.html  OurWork.html  index.html  members.html  package-lock.json  package.json  pkg  style.css  vite.config.js  work.html
site/pkg/: crypto.js  crypto_bg.wasm  le_exif.js  le_exif_bg.wasm  media.js  media_bg.wasm  wasm.js  wasm_bg.wasm
site/templates/: nav.html  toolbar.html
site/tools/: UnitConversion.html  UnitConvertion.html  archive.html  currency.html  dns.html  encoding.html  exif.html  hash-legacy.html  hash-wasm.html  hash.html  images.html  index.html  media.html  qr.html  unit.html
templates/: nav.html
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
