[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
bcrypt = { version = "0.13", features = ["js"] }
hex = "0.4.3"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true 
codegen-units = 1
panic = "abort"
