[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bcrypt = { version = "0.13", default-features = false, features = ["js", "std"] }
hex = { version = "0.4", default-features = false, features = ["std"] }
md-5 = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }

[profile.release]
opt-level = "z"
lto = true 
codegen-units = 1
panic = "abort"

[build]
target = "wasm32-unknown-unknown"