[package]
name = "media"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif", "gif"] }
wasm-bindgen = { version = "0.2.114", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build]
target = "wasm32-unknown-unknown"